css/player.css
.transitionContainer{
  overflow: hidden;
  width: 15vw;
  height: 13vh;
  position: absolute;
  left: 50%;
  top: 100%;
  transform: translate(-50%, -1.5%);
  z-index: 4;
}

.playerBox{
  transform: translateY(-105%);
  pointer-events: none;

  width: 15vw;
  height: 12vh;
  box-shadow: 0px 3px 3px 1px rgba(0, 0, 0, 0.15);
  background-color: white;
  border-radius: 0px 0px 11px 11px;
  border: 2px solid #afafaf;
  border-top: none;
  overflow: hidden;

  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 5px;

  transition: transform 0.2s;
}

.playerBox.shown{
  pointer-events: auto;
  transform: translateY(0%);
}

@keyframes runningText{
  from {transform: translateX(0);}
  to {transform: translateX(-56%);}
}

.trackNameBox{
  width: 12.5vw;
  white-space: nowrap;
  overflow: hidden;
}

.trackMove{
  display: flex;
  gap: 6%;
  width: max-content;
}

.playerBox.shown .trackMove.animated{
  animation-name: runningText;
  animation-timing-function: linear;
  animation-delay: 0.2s;
  animation-iteration-count: infinite;
}

.trackName{
  color: #f59300;
  font-size: 1.2rem;
  font-weight: 500;
}

.trackDurationContainer{
  display: flex;
  align-items: center;
  gap: 5px;
}

.timer{
  color: grey;
  transform: translateY(-2px);
}

.playerSlider{
  appearance: none;
  background-color: transparent;
  cursor: pointer;
  width: 8.5vw;
}

.playerSlider::-moz-range-track{
  background-color: #afafaf;
  height: 0.7vh;
  border-radius: 9999px;

  transition: height 0.1s;
}

.playerSlider::-moz-range-thumb{
  opacity: 0;
}

.playerSlider::-moz-range-progress{
  height: 0.7vh;
  border-radius: 9999px;
  background-color: #3e3e3e;

  transition: height 0.1s;
}

.playerSlider.volume{
  width: 0vw;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  left: 90%;

  transition: width 0.15s, opacity 0.15s;
}

.playerSlider.volume.shown{
  width: 4vw;
  opacity: 1;
  pointer-events: auto;
}

.playerSlider:hover::-moz-range-track,
.playerSlider:hover::-moz-range-progress{
  height: 0.9vh;
}

.trackSettings{
  display: flex;
  align-items: center;
  
}

.trackVolumeContainer{
  display: flex;
  align-items: center;
  position: relative;
}

.trackVolumeBtn{
  border: none;
  background-color: transparent;
  cursor: pointer;
  transform: translateY(1.5px);

  transition: transform 0.1s;
}

.trackVolumeIcon{
  width: 20px;
}

.loopBtn{
  width: 30px;
  height: 30px;
  cursor: pointer;
  background-color: transparent;
  border-radius: 50%;
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: transform 0.1s;
}

.loopIcon{
  width: 25px;
}

.trackVolumeBtn:active{
  transform: scale(0.85) translateY(1.5px);
}

.loopBtn:active{
  transform: scale(0.85)
}

